feat: add admission data api
